enabled markdown support

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -7,7 +7,7 @@
         </p> <span class="toggle glyphicon glyphicon-resize-full"></span>
 
         <span class="noteContent">
-            {{ $value.Content }}
+            {{ $value.HTMLContent }}
                  <div class="commentslist">
 		 {{ range $value.Comments }}
                     <div class="comment">
